removing ios input borders in  hopes for alignment fix

--- a/u-ov_styles.css
+++ b/u-ov_styles.css
@@ -504,6 +504,9 @@ stroke-miterlimit: 10;
 }
 
 input[type=text] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     font-size: .8em;
     font-weight: 300;
     border: none;
@@ -515,6 +518,9 @@ input[type=text] {
 }
 
 input[type=password] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     font-size: .8em;
     font-weight: 300;
     border: none;
